// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupExtraDetails details when mentioned 1`] = `
<GroupExtra
  align="center"
>
  <GroupShortId
    shortId="shortId"
  />
  <Times>
    <div
      className="css-77t6iv"
    >
      <GroupTimeIcon
        src="icon-clock-sm"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
      <span
        className="hidden-xs hidden-sm"
      >
         — 
      </span>
      <TimeSince
        className="hidden-xs hidden-sm"
        date="2017-07-01T02:06:02Z"
        suffix="old"
      />
    </div>
  </Times>
  <GroupExtraCommentsAndLogger>
    <Box
      mr={2}
    >
      <CommentsLink
        className="comments"
        to="/orgId/projectId/issues/groupId/activity/"
      >
        <GroupExtraIcon
          mentioned={true}
          src="icon-comment-sm"
        />
        <span>
          14
        </span>
      </CommentsLink>
    </Box>
    <Box
      className="event-annotation"
      mr={2}
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/orgId/projectId/",
            "query": Object {
              "query": "logger:javascript logger",
            },
          }
        }
      >
        javascript logger
      </Link>
    </Box>
  </GroupExtraCommentsAndLogger>
  <div
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation1",
      }
    }
    key="0"
  />
  <div
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation2",
      }
    }
    key="1"
  />
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders all details 1`] = `
<GroupExtra
  align="center"
>
  <GroupShortId
    shortId="shortId"
  />
  <Times>
    <div
      className="css-77t6iv"
    >
      <GroupTimeIcon
        src="icon-clock-sm"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
      <span
        className="hidden-xs hidden-sm"
      >
         — 
      </span>
      <TimeSince
        className="hidden-xs hidden-sm"
        date="2017-07-01T02:06:02Z"
        suffix="old"
      />
    </div>
  </Times>
  <GroupExtraCommentsAndLogger>
    <Box
      mr={2}
    >
      <CommentsLink
        className="comments"
        to="/orgId/projectId/issues/groupId/activity/"
      >
        <GroupExtraIcon
          src="icon-comment-sm"
        />
        <span>
          14
        </span>
      </CommentsLink>
    </Box>
    <Box
      className="event-annotation"
      mr={2}
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/orgId/projectId/",
            "query": Object {
              "query": "logger:javascript logger",
            },
          }
        }
      >
        javascript logger
      </Link>
    </Box>
  </GroupExtraCommentsAndLogger>
  <div
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation1",
      }
    }
    key="0"
  />
  <div
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation2",
      }
    }
    key="1"
  />
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders assignee and status 1`] = `
<GroupExtra
  align="center"
>
  <GroupShortId
    shortId="shortId"
  />
  <Times>
    <div
      className="css-77t6iv"
    >
      <GroupTimeIcon
        src="icon-clock-sm"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
      <span
        className="hidden-xs hidden-sm"
      >
         — 
      </span>
      <TimeSince
        className="hidden-xs hidden-sm"
        date="2017-07-01T02:06:02Z"
        suffix="old"
      />
    </div>
  </Times>
  <GroupExtraCommentsAndLogger>
    <Box
      mr={2}
    >
      <CommentsLink
        className="comments"
        to="/orgId/projectId/issues/groupId/activity/"
      >
        <GroupExtraIcon
          src="icon-comment-sm"
        />
        <span>
          14
        </span>
      </CommentsLink>
    </Box>
    <Box
      className="event-annotation"
      mr={2}
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/orgId/projectId/",
            "query": Object {
              "query": "logger:javascript logger",
            },
          }
        }
      >
        javascript logger
      </Link>
    </Box>
  </GroupExtraCommentsAndLogger>
  <div
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation1",
      }
    }
    key="0"
  />
  <div
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation2",
      }
    }
    key="1"
  />
  <div>
    <span
      key="4"
    >
      <span
        key="0"
      >
        Assigned to 
      </span>
      <span
        key="2"
      >
        Assignee Name
      </span>
    </span>
  </div>
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders last and first seen 1`] = `
<GroupExtra
  align="center"
>
  <Times>
    <div
      className="css-77t6iv"
    >
      <GroupTimeIcon
        src="icon-clock-sm"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
      <span
        className="hidden-xs hidden-sm"
      >
         — 
      </span>
      <TimeSince
        className="hidden-xs hidden-sm"
        date="2017-07-01T02:06:02Z"
        suffix="old"
      />
    </div>
  </Times>
  <GroupExtraCommentsAndLogger />
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders only first seen 1`] = `
<GroupExtra
  align="center"
>
  <Times>
    <div
      className="css-77t6iv"
    >
      <TimeSince
        className="hidden-xs hidden-sm"
        date="2017-07-01T02:06:02Z"
        suffix="old"
      />
    </div>
  </Times>
  <GroupExtraCommentsAndLogger />
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders only last seen 1`] = `
<GroupExtra
  align="center"
>
  <Times>
    <div
      className="css-77t6iv"
    >
      <GroupTimeIcon
        src="icon-clock-sm"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
    </div>
  </Times>
  <GroupExtraCommentsAndLogger />
</GroupExtra>
`;
